fix bug with flickering cause of localstorage application of theme

--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -30,6 +30,13 @@ body {
     background-color: $body-bg;
     color: $text-color;
   }
+  
+  animation: fadeIn 0.3s ease-in;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 
